Ajout 2 interfaces pour enum de l ontology Ajout HOObjectProperty enum dans ontology Adoption d une nouvelle methode dans addIndividual et addProperty Traitement de book, chapter, section, narration dans le serialiseur

--- a/jHadith/src/org/knowde/hadith/owl/hadith-ontology.properties
+++ b/jHadith/src/org/knowde/hadith/owl/hadith-ontology.properties
@@ -26,7 +26,7 @@ hadith.ontology.class.=حديث_تسلسلي
 hadith.ontology.class.=قدسي
 hadith.ontology.class.=حسن
 hadith.ontology.class.=مفرد
-hadith.ontology.class.book=كتاب_أحاديث
+hadith.ontology.class.narrationbook=كتاب_أحاديث
 hadith.ontology.class.=مشهور
 hadith.ontology.class.=علاقة
 hadith.ontology.class.=حديث_معلل
@@ -82,13 +82,13 @@ hadith.ontology.class.section=باب
 hadith.ontology.class.=معنعن
 
 hadith.ontology.property.=مألفه
-hadith.ontology.property.=كتابه
-hadith.ontology.property.=فصله
+hadith.ontology.property.hasBook=كتابه
+hadith.ontology.property.hasChapter=فصله
 hadith.ontology.property.=شيخه
 hadith.ontology.property.=شخصه
 hadith.ontology.property.=سنده
 hadith.ontology.property.=حديثه
-hadith.ontology.property.=بابه
+hadith.ontology.property.hasSection=بابه
 hadith.ontology.property.=درجة
 hadith.ontology.property.=سنة_ميلاد
 hadith.ontology.property.=تسلسل
@@ -106,7 +106,7 @@ hadith.ontology.property.=لفظ
 hadith.ontology.property.=وضع
 hadith.ontology.property.=منتهى
 hadith.ontology.property.title=عنوان
-hadith.ontology.property.=ترتيب
+hadith.ontology.property.ordernum=ترتيب
 hadith.ontology.property.=كنية
 hadith.ontology.property.=نص_سند
 hadith.ontology.property.=قبيلة
