Fin Serializer et la génération de tous les individuels.

--- a/jHadith/src/org/knowde/hadith/owl/hadith-ontology.properties
+++ b/jHadith/src/org/knowde/hadith/owl/hadith-ontology.properties
@@ -86,15 +86,15 @@ hadith.ontology.property.hasBook=كتابه
 hadith.ontology.property.hasChapter=فصله
 hadith.ontology.property.=شيخه
 hadith.ontology.property.=شخصه
-hadith.ontology.property.=سنده
-hadith.ontology.property.=حديثه
+hadith.ontology.property.hasChain=سنده
+hadith.ontology.property.hasHadith=حديثه
 hadith.ontology.property.hasSection=بابه
 hadith.ontology.property.=درجة
 hadith.ontology.property.=سنة_ميلاد
 hadith.ontology.property.=تسلسل
 hadith.ontology.property.=اسم
 hadith.ontology.property.=صفة
-hadith.ontology.property.=نص_متن
+hadith.ontology.property.matnText=نص_متن
 hadith.ontology.property.=علو
 hadith.ontology.property.=نص
 hadith.ontology.property.=سنة_تأليف
@@ -102,15 +102,16 @@ hadith.ontology.property.=سنة_وفاة
 hadith.ontology.property.=نص_زيادة
 hadith.ontology.property.=شهرة
 hadith.ontology.property.=نص_مدرج
-hadith.ontology.property.=لفظ
+hadith.ontology.property.term=لفظ
 hadith.ontology.property.=وضع
 hadith.ontology.property.=منتهى
 hadith.ontology.property.title=عنوان
 hadith.ontology.property.ordernum=ترتيب
 hadith.ontology.property.=كنية
-hadith.ontology.property.=نص_سند
+hadith.ontology.property.chainText=نص_سند
 hadith.ontology.property.=قبيلة
 hadith.ontology.property.=سنة_إسلام
 hadith.ontology.property.=حالة
 
 
+hadith.ontology.tmpdir=D:\\devs\\git\\jHadith\\jHadith\\bin\\org\\knowde\\hadith\\test\\tmpdir\\
